# voice-terminal

./: .env.example  .gitignore  CLAUDE.md  README.md  config.json  install.sh  package-lock.json  package.json  pyproject.toml
docs/kickoff/: audio-capture.md  experience-notes.md  index.md  llm-voice-correction.md  soniox-stt-service.md  stopword-detector.md  voice-types-and-utils.md
docs/plan/: BACKLOG.md  WHITEBOARD.md
electron/: credentials.js  kitty-service.js  llm-service.js  main.js  preload.js
lt-memory/: architecture.md  pitfalls.md
src/voice_terminal/: audio.py  kitty.py  llm.py  stopword.py  stt.py
tests/: test_kitty.py
ui/: index.html  renderer.js  setup.html  setup.js  stopword.js  stt.js  styles.css
